k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-hello-world-deployment
  labels:
    app: flask-hello-world-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-hello-world-app
  template:
    metadata:
      labels:
        app: flask-hello-world-app
    spec:
      containers:
        - name: flask-hello-world-app-container
          image: 930354804502.dkr.ecr.us-east-1.amazonaws.com/hello_world:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8888
      imagePullSecrets:
        - name: regcred
