k8s/manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: health-check-service
spec:
  type: NodePort
  ports:
    - port: 8888
  selector:
    app: node-hello-world-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-hello-world-deployment
  labels:
    app: node-hello-world-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-hello-world-app
  template:
    metadata:
      labels:
        app: node-hello-world-app
    spec:
      containers:
        - name: node-hello-world-app-container
          image: 930354804502.dkr.ecr.us-east-1.amazonaws.com/hello_world:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8888
      imagePullSecrets:
        - name: regcred
