k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  type: NodePort
  ports:
    - port: 8888
  selector:
    app: flask-hello-world-app
